tdf#156808 soft edge effect makes image (except for soft edge) disappear

This is clearly fallout from
     commit 81994cb2b8b32453a92bcb011830fcb884f22ff3
     Date:   Fri Apr 16 20:33:10 2021 +0200
     Convert internal vcl bitmap formats transparency->alpha (II)
And it clearly fixes the problem, but I'm not sure __why__ it fixes the
problem.

Change-Id: I805ed85dd22b2124328e6b4dba098c5f093aec55
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156198
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>